src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__assignment_to_number_reference_with_explicit_plus_sign.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statements
---
[
    Assignment {
        left: Reference {
            name: "x",
        },
        right: LiteralInteger {
            value: 1,
        },
    },
    Assignment {
        left: Reference {
            name: "x",
        },
        right: Reference {
            name: "x",
        },
    },
]
