src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__bitwise_access_parsed.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: "&prg.statements"
---
[
    ReferenceExpr {
        kind: Member(
            DirectAccess {
                access: Bit,
                index: LiteralInteger {
                    value: 0,
                },
            },
        ),
        base: Some(
            ReferenceExpr {
                kind: Member(
                    Reference {
                        name: "a",
                    },
                ),
                base: None,
            },
        ),
    },
    ReferenceExpr {
        kind: Member(
            DirectAccess {
                access: Bit,
                index: LiteralInteger {
                    value: 1,
                },
            },
        ),
        base: Some(
            ReferenceExpr {
                kind: Member(
                    Reference {
                        name: "a",
                    },
                ),
                base: None,
            },
        ),
    },
    ReferenceExpr {
        kind: Member(
            DirectAccess {
                access: Byte,
                index: LiteralInteger {
                    value: 1,
                },
            },
        ),
        base: Some(
            ReferenceExpr {
                kind: Member(
                    Reference {
                        name: "a",
                    },
                ),
                base: None,
            },
        ),
    },
    ReferenceExpr {
        kind: Member(
            DirectAccess {
                access: Byte,
                index: ReferenceExpr {
                    kind: Member(
                        Reference {
                            name: "b",
                        },
                    ),
                    base: None,
                },
            },
        ),
        base: Some(
            ReferenceExpr {
                kind: Member(
                    Reference {
                        name: "a",
                    },
                ),
                base: None,
            },
        ),
    },
    ReferenceExpr {
        kind: Member(
            DirectAccess {
                access: Word,
                index: LiteralInteger {
                    value: 1,
                },
            },
        ),
        base: Some(
            ReferenceExpr {
                kind: Index(
                    LiteralInteger {
                        value: 0,
                    },
                ),
                base: Some(
                    ReferenceExpr {
                        kind: Member(
                            Reference {
                                name: "a",
                            },
                        ),
                        base: None,
                    },
                ),
            },
        ),
    },
    ReferenceExpr {
        kind: Member(
            DirectAccess {
                access: DWord,
                index: LiteralInteger {
                    value: 1,
                },
            },
        ),
        base: Some(
            ReferenceExpr {
                kind: Member(
                    Reference {
                        name: "b",
                    },
                ),
                base: Some(
                    ReferenceExpr {
                        kind: Member(
                            Reference {
                                name: "a",
                            },
                        ),
                        base: None,
                    },
                ),
            },
        ),
    },
    ReferenceExpr {
        kind: Member(
            DirectAccess {
                access: Bit,
                index: LiteralInteger {
                    value: 1,
                },
            },
        ),
        base: Some(
            ReferenceExpr {
                kind: Member(
                    DirectAccess {
                        access: Byte,
                        index: LiteralInteger {
                            value: 1,
                        },
                    },
                ),
                base: Some(
                    ReferenceExpr {
                        kind: Member(
                            Reference {
                                name: "a",
                            },
                        ),
                        base: None,
                    },
                ),
            },
        ),
    },
]
