src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__boolean_expression_ast_test.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
BinaryExpression {
    operator: Or,
    left: BinaryExpression {
        operator: And,
        left: Reference {
            name: "a",
        },
        right: UnaryExpression {
            operator: Not,
            value: Reference {
                name: "b",
            },
        },
    },
    right: BinaryExpression {
        operator: Xor,
        left: Reference {
            name: "c",
        },
        right: Reference {
            name: "d",
        },
    },
}
