src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__boolean_priority_test.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
BinaryExpression {
    operator: Or,
    left: BinaryExpression {
        operator: Xor,
        left: BinaryExpression {
            operator: And,
            left: Reference {
                name: "a",
            },
            right: Reference {
                name: "b",
            },
        },
        right: Reference {
            name: "c",
        },
    },
    right: Reference {
        name: "d",
    },
}
