src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__function_call_formal_params.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
CallStatement {
    operator: ReferenceExpr {
        kind: Member(
            Reference {
                name: "fn",
            },
        ),
        base: None,
    },
    parameters: Some(
        ExpressionList {
            expressions: [
                Assignment {
                    left: ReferenceExpr {
                        kind: Member(
                            Reference {
                                name: "x",
                            },
                        ),
                        base: None,
                    },
                    right: LiteralInteger {
                        value: 1,
                    },
                },
                Assignment {
                    left: ReferenceExpr {
                        kind: Member(
                            Reference {
                                name: "y",
                            },
                        ),
                        base: None,
                    },
                    right: LiteralInteger {
                        value: 2,
                    },
                },
                OutputAssignment {
                    left: ReferenceExpr {
                        kind: Member(
                            Reference {
                                name: "z",
                            },
                        ),
                        base: None,
                    },
                    right: ReferenceExpr {
                        kind: Member(
                            Reference {
                                name: "a",
                            },
                        ),
                        base: None,
                    },
                },
            ],
        },
    ),
}
